incorporate previous years into project